--- a/.code_quality/.pylintrc
+++ b/.code_quality/.pylintrc
@@ -151,7 +151,8 @@ disable=print-statement,
         too-few-public-methods, # R0903
         duplicate-code, #R0801
         cell-var-from-loop, #W0640
-        protected-access #W0212
+        protected-access, #W0212
+        raise-missing-from #W0707
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
